# data_organizer

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  release.zsh  setup.cfg
.github/workflows/: test.yml
conf/: settings.toml
data_organizer/: config.py  utils.py
data_organizer/cli/: edit_table.py  extract_byte_to_file.py
data_organizer/data/: populator.py
data_organizer/db/: connection.py  exceptions.py  model.py
data_organizer/etl/: README.md  enhance_track.py  exceptions.py
data_organizer/etl/gpx_tracks/: enhance_track.py  gen_track_overview.py
data_organizer/test/: test_config.py  test_db_from_config.py
data_organizer/test/conf/: settings.toml  test_table_common_not_defined.toml  test_table_good.toml  test_table_mandatory_missing.toml  test_table_name_missing.toml  test_table_unexp_key.toml  test_table_unexp_key_type.toml  test_table_wrong_type.toml
data_organizer/test/data/: test_populator.py
data_organizer/test/db/: test_connection.py  test_model.py
requirements/: dev.in  dev.txt  prod.txt  test.in  test.txt
tests/: test_config.py  test_db_from_config.py
tests/conf/: test_table_common_not_valid.toml  test_table_good_serial.toml  test_table_good_w_rel.toml  test_table_mandatory_missing.toml  test_table_name_missing.toml  test_table_rel_not_defined.toml  test_table_unexp_key_type.toml
tests/db/: test_connection.py  test_model.py
