[metadata]
name = data_organizer
version = 0.0.1
author='Korbinian Schweiger'
author_email='korbinina.schweiger@gmail.com'
description='Collection of general purpose and specific utilities and tools to interact with structured databases'


[options]
packages = data_organizer
install_requires =
    coloredlogs
    sqlalchemy
    pymysql
    psycopg2
    pypika
    click
    hydra-core

;[options.entry_points]
;console_scripts =
;    run-updater = data_organizer.runner:cli

[flake8]
max-line-length = 88
extend-ignore = E203,E266,E402  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = list
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black


