[metadata]
name = data_organizer
version = 1.0.2
author='Korbinian Schweiger'
author_email='korbinina.schweiger@gmail.com'
description='Collection of general purpose and specific utilities and tools to interact with structured databases'


[options]
packages = find:
install_requires =
    coloredlogs
    sqlalchemy
    pymysql
    psycopg2
    pypika
    click
    pandas
    dynaconf
    pydantic

[options.entry_points]
console_scripts =
    edit-table = data_organizer.cli.edit_table:cli
    extract-byte = data_organizer.cli.extract_byte_to_file:cli
[flake8]
max-line-length = 88
extend-ignore = E203,E266,E402  # E203 conflicts with PEP8; see https://github.com/psf/black#slices

# flake8-pytest-style
# PT001:
pytest-fixture-no-parentheses = true
# PT006:
pytest-parametrize-names-type = tuple
# PT007:
pytest-parametrize-values-type = list
pytest-parametrize-values-row-type = tuple
# PT023:
pytest-mark-no-parentheses = true

[isort]
profile = black


